# IP-Zhushma-Artem-TT

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: app.py  config.py  models.py  repository.py  routes.py  schemas.py
migrations/: env.py
migrations/versions/: ed434d538bbd_initial_user_table.py
